<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCargaMudas2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wrapper_btn_claro"
        android:text="Inserir carga de Muda"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProcedencia"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/campo_procedencia"
        android:inputType="number"
        android:maxLength="20"
        android:textSize="20dp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintStart_toStartOf="@+id/txtCargaMudas2"
        app:layout_constraintTop_toBottomOf="@+id/txtCargaMudas2"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnBuscaProcedencia"
        style="@style/LayoutPadraoBttLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/editProcedencia"
        app:layout_constraintEnd_toEndOf="@+id/txtCargaMudas2"
        app:layout_constraintStart_toEndOf="@+id/editProcedencia"
        app:layout_constraintTop_toTopOf="@+id/editProcedencia"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editConsultaProcedencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/campo_nome_procedencia"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="20sp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintEnd_toEndOf="@+id/txtCargaMudas2"
        app:layout_constraintStart_toStartOf="@+id/txtCargaMudas2"
        app:layout_constraintTop_toBottomOf="@+id/editProcedencia"
        tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editFazenda3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/campo_fazenda"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="20dp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConsultaProcedencia"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnBuscaFazenda3"
        style="@style/LayoutPadraoBttLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editFazenda3"
        app:layout_constraintStart_toEndOf="@+id/editFazenda3"
        app:layout_constraintTop_toTopOf="@+id/editFazenda3"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTalhao3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/campo_talhao"
        android:inputType="number"
        android:maxLength="12"
        android:textSize="20sp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintStart_toEndOf="@+id/btnBuscaFazenda3"
        app:layout_constraintTop_toBottomOf="@+id/editConsultaProcedencia"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnBuscaTalhao3"
        style="@style/LayoutPadraoBttLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:width="2dp"
        android:padding="15dip"
        app:layout_constraintBottom_toBottomOf="@+id/editTalhao3"
        app:layout_constraintStart_toEndOf="@+id/editTalhao3"
        app:layout_constraintTop_toTopOf="@+id/editTalhao3"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editConsultaFazenda3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="Nome Fazenda"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="20sp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFazenda3"
        tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editCarga"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/campo_carga"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="20sp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConsultaFazenda3"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editPeso"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/campo_peso"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textSize="20sp"
        android:theme="@style/LayoutPadraoEditTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConsultaFazenda3"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnAdicionar"
        style="@style/LayoutPadraoBttLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:drawableTint="@color/white"
        android:padding="15dip"
        android:text="@string/btn_adicionar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCarga" />

</androidx.constraintlayout.widget.ConstraintLayout>